--- a/style-racebikes.css
+++ b/style-racebikes.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&display=swap');
 
 
-body {
+.body {
     padding: 3%;
     margin: 2%;
 
