--- a/style.css
+++ b/style.css
@@ -1,34 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&display=swap');
 
-.heading{
-        font-family: Verdana , sans-serif;
-        font-size: 5rem;
+.heading {
+    font-family: Verdana, sans-serif;
+    font-size: 5rem;
 }
 
-body{
-    margin:1%;
-    padding:2%;
-    background-color:#555555 ;
+body {
+    margin: 1%;
+    padding: 2%;
+    background-color: #555555;
     font-family: 'Montserrat', sans-serif;
     color: floralwhite;
     font-size: 1.4rem;
 }
 
-.carousel-size{
+.carousel-size {
     max-width: 60%;
     max-height: 40%;
 }
 
-.touringbikes-button{
+.touringbikes-button {
     align-content: center;
 }
 
-.touring-bikes-img{
+.touring-bikes-img {
     max-height: 40%;
     max-width: 40%;
 }
 
-.touring-bikes-table  table {
+.touring-bikes-table table {
     width: 100%;
     border-collapse: collapse;
     margin: 20px 0;
@@ -62,7 +62,7 @@ body{
     background-color: rgba(85, 172, 227, 0.6);
 }
 
-.touring-bikes-table tr{
+.touring-bikes-table tr {
     transition: background-color 0.15s;
 }
 
@@ -71,20 +71,72 @@ body{
     line-height: 1.5;
 }
 
-.cruiser-list ul > li:hover{
+.cruiser-list ul > li:hover {
     transition: color 0.2s;
-    color:orange;
+    color: orange;
 }
 
-.cruiser-img-hover div:hover{
+.cruiser-img-hover div:hover {
     background-color: grey;
 }
 
-.cruiser-img img{
-    height:40%;
+.cruiser-img img {
+    height: 40%;
     width: auto;
 }
 
 .cruiser-p {
     margin-left: 16%;
+}
+
+.enduro-heading {
+    background: linear-gradient(to right, #C2B280, #8B4513, #FFA500);
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 5rem;
+}
+
+.info a {
+    text-decoration: none;
+    color: orangered;
+}
+
+.info a:hover {
+    color: #b10000;
+    text-decoration: underline;
+    transition: color 0.3s, underline 0.3s;
+}
+
+.info h2 {
+    color: orangered;
+    text-decoration: underline;
+}
+
+.enduro-img {
+    height: 80%;
+    width: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.enduro-background {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("https://www.jagdfakten.at/wp-content/uploads/2023/06/Trial-Motorrad-im-Wald_Jagdfakten-Oesterreich-informiert_-%C2%A9egor-unsplash.jpg");
+}
+
+.enduro-background ::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 145%;
+    background-color: rgba(0, 0, 0, 0.08);
+    z-index: -1;
+
+}
+
+.enduro-body {
+    z-index: 1;
 }
