--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 145%;
+    height: 210%;
     background-color: rgba(0, 0, 0, 0.08);
     z-index: -1;
 
@@ -143,5 +143,9 @@ body {
 
 .cruiser-centered img{
     display: block;
+    margin: 0 auto;
+}
+
+.enduro-track {
     margin: 0 auto;
 }
